Prevent overflow in displayer

--- a/app/styles/calculator.css
+++ b/app/styles/calculator.css
@@ -15,7 +15,9 @@
     text-align: right;
     margin: 1% 5%;
     width: 90%;
+    height: auto;
     box-shadow: 0px -4px seagreen;
+    word-break: break-all
 }
 .btn {
     width: 22.1%;
